Add dotfiles and powerline to be deployed. Also, a few new apt packages.

--- a/playbooks/ansible.cfg
+++ b/playbooks/ansible.cfg
@@ -1,5 +1,2 @@
 [defaults]
-hostfile = hosts
-remote_user = s.kupstaitis-dunkler
-private_key_file = ~/.ssh/id_rsa
-host_key_checking = False
+hostfile = ./hosts
