--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -1,72 +1,38 @@
 #!/usr/bin/env ansible-playbook
 ---
 - hosts: local
+  gather_facts: no
   vars: 
     user: s.kupstaitis-dunkler
     workspace_path: ~/workspace/private/
+    chefdk_deb_url: https://opscode-omnibus-packages.s3.amazonaws.com/ubuntu/12.04/x86_64/chefdk_0.11.2-1_amd64.deb
     chefdk_deb_filename: /tmp/chefdk.deb
+    powerline_fonts_url: https://github.com/powerline/fonts.git
+    vundle_url: https://github.com/VundleVim/Vundle.vim.git
+    packages_to_install: [ git, git-flow, gitk, ansible, automake, build-essential, 
+        chromium-browser, docker.io, ipython, mosh, nodejs-legacy,
+        npm, openjdk-7-jdk, python-pip, ruby-dev, python-dev,
+        vagrant, terminator, vim, cowsay, htop, bc, ranger, ngrep,
+        dtrx, dstat, libfreetype6-dev, libblas3, gfortran,
+        liblapack3, libblas-dev, liblapack-dev, libatlas-base-dev,
+        freeipa-client, sysstat, libsasl2-dev, virtualbox
+        ]
+    pip_packages_to_install: [
+        awscli, jupyter, matplotlib, flake8, nose, vim_bridge, mock,
+        numpy, scipy, pandas, scikit-learn, scikit-image,
+        "snakebite[kerberos]", fabric]
   sudo: yes
   tasks:
     - name: install ubuntu packages
       apt: pkg={{ item }} state=installed
-      with_items:
-        - git
-        - git-flow
-        - gitk
-        - ansible
-        - automake
-        - build-essential
-        - chromium-browser
-        - docker.io
-        - ipython
-        - mosh
-        - nodejs-legacy
-        - npm
-        - openjdk-7-jdk
-        - python-pip
-        - ruby-dev
-        - python-dev
-        - vagrant
-        - terminator
-        - vim
-        - cowsay
-        - htop
-        - bc
-        - ranger
-        - ngrep
-        - dtrx
-        - dstat
-        - libfreetype6-dev
-        - libblas3
-        - gfortran
-        - liblapack3
-        - libblas-dev
-        - liblapack-dev
-        - libatlas-base-dev
-        - freeipa-client
-        - sysstat
-        - libsasl2-dev
-        - virtualbox
+      with_items: packages_to_install
 
     - name: install python modules with pip
       pip: name={{ item }}
-      with_items:
-        - awscli
-        - jupyter
-        - matplotlib
-        - flake8
-        - nose
-        - vim_bridge
-        - mock
-        - numpy
-        - scipy
-        - pandas
-        - scikit-learn
-        - scikit-image
-        - snakebite[kerberos]
+      with_items: pip_packages_to_install
    
     - name: install Vundle
-      git: repo='https://github.com/VundleVim/Vundle.vim.git' dest='~/.vim/bundle/Vundle.vim'
+      git: repo='{{ vundle_url }}' dest='~/.vim/bundle/Vundle.vim'
 
     - name: install Vundle plugins
       command: "vim -E -s -c 'source ~/.vimrc' -c PluginInstall -c qa"
@@ -90,7 +56,7 @@
       copy: src=./files/ssh_config dest=/home/{{ user }}/.ssh/config owner={{ user }} group={{ user }}
 
     - name: download powerline fonts
-      git: repo='https://github.com/powerline/fonts.git' dest='{{ workspace_path }}/fonts'
+      git: repo='{{ powerline_fonts_url }}' dest='{{ workspace_path }}/fonts'
       notify:
         - install powerline fonts
 
@@ -107,7 +73,7 @@
       command: "{{ workspace_path }}/fonts/install.sh"
 
     - name: download chefdk
-      command: "wget 'https://opscode-omnibus-packages.s3.amazonaws.com/ubuntu/12.04/x86_64/chefdk_0.11.2-1_amd64.deb' -o {{ chefdk_deb_filename }}"
+      command: "wget '{{ chefdk_deb_url }}' -o {{ chefdk_deb_filename }}"
       notify:
         - install chefdk
     
