Add nodejs libs necessary for aws iot

--- a/raspbian-bootstrap/playbook.yml
+++ b/raspbian-bootstrap/playbook.yml
@@ -4,14 +4,14 @@
   gather_facts: yes
   vars:
     wifi:
-      ssid: MY_SSID
-      password: MY_WIFI_PASSWORD
+      ssid: "Cthulhu's Lair"
+      password: dizzycarrot721
     packages_to_install: [ git, automake, build-essential, 
         ipython, mosh, node, npm, python-pip, ruby-dev, python-dev,
         vim, cowsay, htop, ranger
         ]
     pip_packages_to_install: [ awscli ]
-    npm_packages_to_install: [ aws-iot-device-sdk ]
+    npm_packages_to_install: [ mqtt, crypto-js, minimist, websocket-stream ]
     update_cache: no
   sudo: yes
   tasks:
@@ -24,6 +24,12 @@
       register: aptget
       changed_when: "'python-apt is already the newest version.' not in aptget.stdout_lines"
 
+    - name: add node repo
+      command: "/bin/bash -c 'curl -sLS https://apt.adafruit.com/add | sudo bash'"
+      register: add
+      #changed_when:
+    - debug: var=add
+
     - name: install ubuntu packages
       apt: pkg={{ item }} state=installed update_cache={{ update_cache }}
       with_items: packages_to_install
@@ -35,6 +41,10 @@
     - name: install node.js packages with npm
       npm: name={{ item }} global=yes
       with_items: npm_packages_to_install
+
+    - name: install amazon iot device sdk
+      git: repo=https://github.com/aws/aws-iot-device-sdk-js.git dest=/home/pi/aws-iot-device-sdk-js
+      
   handlers:
     - name: reboot
       command: shutdown -r now "Ansible updates triggered"
