--- a/ubuntu-bootstrap/playbook.yml
+++ b/ubuntu-bootstrap/playbook.yml
@@ -127,6 +127,11 @@
       with_items: '{{ruby_gems_to_install}}'
       become: yes
 
+    - name:
+      command: git config --global credential.helper "cache --timeout=3600"
+      changed_when: False
+      
+
   handlers:
     - name: install powerline fonts
       command: "{{ workspace_path }}/fonts/install.sh"
