Add energy.pem key to list of keys loaded by the agent

--- a/ubuntu-bootstrap/playbook.yml
+++ b/ubuntu-bootstrap/playbook.yml
@@ -20,6 +20,7 @@
       - vie.pem
       - github.pem
       - gitlab.pem
+      - energy.pem
     packages_to_install: [
         git-flow, gitk, automake, build-essential, tree, 
         chromium-browser, docker.io, ipython, mosh, nodejs-legacy,
