Change cam alias in .gitconfig; comment out system upgrade passage

--- a/ubuntu-bootstrap/files/.gitconfig
+++ b/ubuntu-bootstrap/files/.gitconfig
@@ -6,7 +6,7 @@
 [alias]
   co = checkout
   ci = commit -m
-  cam = -a -m
+  cam = commit -a -m
   st = status
   br = branch
   hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
